<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Nama -->
        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Alamat -->
        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="textPostalAddress"
            android:hint="@string/alamat"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />


        <EditText
            android:id="@+id/etTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="birthDate"
            android:focusable="false"
            android:hint="@string/tanggal_lahir"
            android:inputType="date"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            tools:ignore="VisualLintTextFieldSize" />


        <TextView
            android:text="@string/jenis_kelamin"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rgGender"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbLaki"
                android:text="@string/laki_laki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rbPerempuan"
                android:text="@string/perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TextView
            android:text="@string/agama"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spAgama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnSimpan"
            android:text="@string/simpan_biodata"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tvHasil"
            android:text=""
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>